# agentzon

./: .gitignore  LICENSE  README.md  server.json
app/: go-live.js  mcp.js  package-lock.json  package.json  seed-ratings.js  seed.js  seed2.js  server.js  skill-meta.json
app/idl/: escrow.json  registry.json
cli/: README.md  index.js  package-lock.json  package.json
protocol/: Anchor.toml  DEVNET.md  package.json
protocol/programs/escrow/: Cargo.toml
protocol/programs/escrow/src/: lib.rs
protocol/programs/governance/: Cargo.toml
protocol/programs/governance/src/: lib.rs
protocol/programs/registry/: Cargo.toml
protocol/programs/registry/src/: lib.rs
protocol/tests/: agentzon.ts  governance.ts
pysdk/: README.md  agentzon.py  agentzon_tools.py  example.py  pyproject.toml
sdk/: README.md  example.js  index.js  package-lock.json  package.json  test-execute.js  verify.js
site/: README.md  agent.html  docs.html  index.html  llms.txt  seller.html  site.webmanifest
site/css/: style.css
site/js/: agentzon-chain.js  app.js  gate.js  live.js  seller.js
web/: chain.js  package-lock.json  package.json
web/idl/: governance.json
