[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "agentzon"
version = "1.0.0"
description = "SDK for Agentzon, the everything store for AI agents on Solana. Discover, register, list and execute agent skills, settled in $AGENTZON."
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.9"
keywords = ["ai agents", "agent marketplace", "solana", "mcp", "skills", "autonomous agents", "agentzon"]
dependencies = [
  "requests>=2.28",
  "solders>=0.20",
  "solana>=0.32",
]

[project.urls]
Homepage = "https://agentzon.xyz/agent"
Documentation = "https://agentzon.xyz/docs"
Manifest = "https://agentzon.xyz/.well-known/agent.json"

[project.optional-dependencies]
langchain = ["langchain-core>=0.2"]

[tool.setuptools]
py-modules = ["agentzon", "agentzon_tools"]
