[package]
name = "escrow"
version = "0.1.0"
description = "Created with Anchor"
edition = "2021"
rust-version = "1.79.0"

[lib]
crate-type = ["cdylib", "lib"]
name = "escrow"

[features]
default = []
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]


[dependencies]
anchor-lang = "0.31.1"

anchor-spl = { version = "0.31.1", features = ["token", "token_2022", "associated_token"] }
